force-app/main/default/objects/Broadcast__c/fields/Broadcast_Group_IDs__c.field-meta.xml
<CustomField>
    <fullName>Broadcast_Group_IDs__c</fullName>
    <label>Broadcast Group IDs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>