force-app/main/default/objects/Broadcast__c/fields/Failed__c.field-meta.xml
<CustomField>
    <fullName>Failed__c</fullName>
    <label>Failed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>