force-app/main/default/objects/Broadcast__c/fields/Read__c.field-meta.xml
<CustomField>
    <fullName>Read__c</fullName>
    <label>Read</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>