force-app/main/default/objects/Broadcast__c/fields/Schedule_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Schedule_DateTime__c</fullName>
    <label>Schedule DateTime</label>
    <type>DateTime</type>
</CustomField>