force-app/main/default/objects/Broadcast__c/fields/Template__c.field-meta.xml
<CustomField>
    <fullName>Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Template</label>
    <referenceTo>Template__c</referenceTo>
    <relationshipLabel>WB Broadcasts</relationshipLabel>
    <relationshipName>WB_Broadcasts</relationshipName>
    <type>Lookup</type>
</CustomField>